fixed styles on mobile

--- a/public/web_sayt/css/css/main.css
+++ b/public/web_sayt/css/css/main.css
@@ -661,7 +661,6 @@ label {
 
 .user-info {
   display: inline-block;
-  padding-left: 40px;
   padding-bottom: 23px; }
   .user-info p {
     font-weight: 500;
@@ -671,8 +670,8 @@ label {
   .user-info select {
     color: #8BA9EE; }
   .user-info.create__checkbox {
-    padding-left: 45px;
-    max-width: 350px;
+    padding-left: 10px;
+    max-width: 323px;
     width: 100%; }
     .user-info.create__checkbox ~ .user-info.create__checkbox {
       float: right;
@@ -1995,10 +1994,11 @@ body {
     font-size: 30px;
     line-height: 37px;
     color: #00309E;
-    font-weight: 600; }
+    font-weight: 400; }
   .section1 .find__input {
-    padding: 32px 0px 32px 14px;
+    padding: 32px 0 32px 14px;
     font-size: 20px;
+    font-weight: 400;
     width: 95%;
     line-height: 24px;
     color: #AEAEAE; }
@@ -2015,10 +2015,9 @@ body {
         align-items: center; }
   .section1 .find__button {
     margin-top: 45px;
-    margin-bottom: 273px;
     color: #462847; }
     .section1 .find__button a {
-      width: 37%;
+      width: 430px;
       padding: 28px 0px;
       font-size: 26px;
       line-height: 32px;
@@ -2059,21 +2058,21 @@ body {
     margin: 0 auto;
     margin-top: 21px; }
   .section2 .card__flex .cd {
-    width: 430px;
+    width: 380px;
     background-color: #FFFFFF;
-    box-shadow: 0px 0px 6px #00000029;
+    box-shadow: 0 0 6px #00000029;
     border-radius: 32px;
-    margin-bottom: 111px; }
+    margin-bottom: 111px;
+    height: 332px; }
     .section2 .card__flex .cd__content {
       padding: 55px 0 49px 0; }
       .section2 .card__flex .cd__content p {
-        font-size: 39px;
-        line-height: 48px;
+        font-size: 25px;
+        line-height: 30px;
         font-weight: 600;
-        padding-top: 34px;
         color: #462847; }
     .section2 .card__flex .cd:last-child p {
-      padding-top: 70px; }
+      padding-top: 40px; }
 
 .section3 .card__flex {
   margin-top: 111px;
@@ -2180,7 +2179,14 @@ body {
   .create__checkbox label {
     padding-right: 35px; }
 
-@media (min-width: 320px) and (max-width: 600px) {
+.cd__content img {
+  width: 100%;
+  height: 160px; }
+  @media (max-width: 770px) {
+    .cd__content img {
+      height: 100px; } }
+
+@media (min-width: 320px) and (max-width: 768px) {
   /* edite profile user*/
   .add-card {
     flex-direction: column; }
@@ -2286,16 +2292,24 @@ body {
 
   .section1 .find__text {
     padding-top: 18px;
-    font-size: 20px;
-    text-align: center; }
+    font: normal normal 400 10px/13px Montserrat;
+    text-align: center;
+    padding-bottom: 11px; }
 
   .section1 .find__input {
     padding: 10px;
-    width: 60%;
-    font-size: 12px; }
+    width: 80%;
+    font-size: 10px;
+    border-radius: 20px; }
+
+  .input-group-prepend {
+    display: none; }
 
   .find__form-settings .settings-button i {
     font-size: 35px; }
+
+  .find__form-settings {
+    padding-left: 10px; }
 
   .find__form {
     padding: 0 20px;
@@ -2304,7 +2318,8 @@ body {
     align-content: center; }
 
   .input-group {
-    margin: 0 !important; }
+    margin: 0 !important;
+    max-width: 270px; }
 
   .input-group-prepend img {
     width: 20px; }
@@ -2316,9 +2331,10 @@ body {
 
   .section1 .find__button a {
     width: 80%;
-    padding: 11px 0px;
+    padding: 11px 0;
     font-size: 20px;
-    text-align: center; }
+    text-align: center;
+    max-width: 325px; }
 
   .lang {
     display: none; }
@@ -2913,9 +2929,6 @@ body {
   header .nav-top {
     padding: 35px 20px; }
 
-  .section1 .find {
-    margin: 53px 170px; }
-
   .section1 .find__title {
     font-size: 45px;
     font-weight: bold;
@@ -2952,9 +2965,6 @@ body {
 
   .lang {
     display: none; }
-
-  .section2 .card__flex .cd {
-    width: 340px; }
 
   /* end home */
   /* login practitioner */
@@ -3086,7 +3096,7 @@ body {
 @media (min-width: 320px) and (max-width: 600px) {
   /* index */
   .cd__content {
-    margin-top: 25px; }
+    margin-top: 5px; }
 
   /* end index */
   /* edit profil */
